chore: Update setup instructions for different operating systems